[gd_scene load_steps=20 format=3 uid="uid://c32oiah77lhbs"]

[ext_resource type="Script" path="res://Scenes/Level1.gd" id="1_2lt4q"]
[ext_resource type="Texture2D" uid="uid://cn4imd8fdfu2e" path="res://assets/crumpledpaperforeground.png" id="1_stmxr"]
[ext_resource type="PackedScene" uid="uid://r0kab7o5khtn" path="res://Scenes/Player.tscn" id="1_xyaeg"]
[ext_resource type="TileSet" uid="uid://btkwcexmbrhn" path="res://Scenes/Level0.tres" id="2_02wvs"]
[ext_resource type="Texture2D" uid="uid://5n1tvg8twal0" path="res://Img/goal.png" id="2_buas0"]
[ext_resource type="PackedScene" uid="uid://15ci16jcnga0" path="res://Scenes/moveable_box.tscn" id="5_60lx8"]
[ext_resource type="Shader" path="res://Scenes/MenuNode.gdshader" id="5_l4rrw"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_m3244"]
size = Vector2(1106, 147)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ne2qs"]
size = Vector2(113.5, 628)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_pvvtm"]
size = Vector2(82, 158.125)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_4dtym"]
size = Vector2(171, 141)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_35bwn"]
size = Vector2(113, 59)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_p8h4u"]
size = Vector2(52.5, 13)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_3pfeg"]
size = Vector2(58, 60)

[sub_resource type="CircleShape2D" id="CircleShape2D_2xg3j"]

[sub_resource type="CircleShape2D" id="CircleShape2D_t5f21"]
radius = 69.029

[sub_resource type="RectangleShape2D" id="RectangleShape2D_uqbmj"]
size = Vector2(28, 68)

[sub_resource type="ShaderMaterial" id="ShaderMaterial_j7tct"]
shader = ExtResource("5_l4rrw")
shader_parameter/desatR = 0.3
shader_parameter/desatG = 1.0
shader_parameter/desatB = 0.0
shader_parameter/desatAll = 0.0

[sub_resource type="CanvasTexture" id="CanvasTexture_sgmir"]

[node name="Level1" type="Node2D"]
script = ExtResource("1_2lt4q")

[node name="PaperBackgnd" type="Sprite2D" parent="."]
position = Vector2(-9, -38)
texture = ExtResource("1_stmxr")

[node name="TileMap" type="TileMap" parent="."]
scale = Vector2(2, 2)
tile_set = ExtResource("2_02wvs")
format = 2
layer_0/name = "Base"
layer_0/tile_data = PackedInt32Array(-65552, 786440, 11, -16, 393217, 1, 65520, 393217, 2, 131056, 393217, 3, 196592, 393217, 4, 262128, 393217, 5, -65551, 851976, 11, -15, 458753, 1, 65521, 458753, 2, 131057, 458753, 3, 196593, 458753, 4, 262129, 458753, 5, -65550, 917512, 11, -14, 524289, 1, 65522, 524289, 2, 131058, 524289, 3, 196594, 524289, 4, 262130, 524289, 5, -65549, 393216, 13, -13, 589825, 1, 65523, 589825, 2, 131059, 589825, 3, 196595, 589825, 4, 262131, 589825, 5, -65548, 458752, 13, -12, 655361, 1, 65524, 655361, 2, 131060, 655361, 3, 196596, 655361, 4, 262132, 655361, 5, -65547, 524288, 13, -11, 720897, 1, 65525, 720897, 2, 131061, 720897, 3, 196597, 720897, 4, 262133, 720897, 5, -65546, 589824, 13, -10, 786433, 1, 65526, 786433, 2, 131062, 786433, 3, 196598, 786433, 4, 262134, 786433, 5, -65545, 131080, 11, -9, 851969, 1, 65527, 851969, 2, 131063, 851969, 3, 196599, 851969, 4, 262135, 851969, 5, -196621, 393216, 11, -131085, 393216, 12, -196620, 458752, 11, -131084, 458752, 12, -196619, 524288, 11, -131083, 524288, 12, -196618, 589824, 11, -131082, 589824, 12, -327696, 262144, 0, -262160, 262144, 1, -327695, 327680, 0, -262159, 327680, 1, -327688, 393216, 0, -262152, 393216, 1, -327687, 458752, 0, -262151, 458752, 1, -262138, 3, 2, -196602, 3, 3, -131066, 786440, 11, -65530, 458753, 1, -262137, 65539, 2, -196601, 65539, 3, -131065, 851976, 11, -65529, 524289, 1, -131067, 720904, 11, -65531, 393217, 1, 5, 393217, 2, 6, 458753, 2, 7, 524289, 2, 65544, 786433, 4, 131080, 786433, 5, 65545, 851969, 4, 131081, 851969, 5, -131064, 917512, 11, -65528, 786433, 1, 8, 786433, 2, -131063, 983048, 11, -65527, 851969, 1, 9, 851969, 2, 65541, 393217, 4, 131077, 393217, 5, 65542, 458753, 4, 131078, 458753, 5, 65543, 524289, 4, 131079, 524289, 5, -393210, 3, 0, -327674, 3, 1, -393209, 65539, 0, -327673, 65539, 1, -393217, 524291, 4, -327681, 524291, 5, -262145, 524291, 6, -196609, 524291, 7, -131073, 524291, 8, -458752, 589827, 4, -393216, 589827, 5, -327680, 589827, 6, -262144, 589827, 7, -196608, 589827, 8, -458751, 655363, 4, -393215, 655363, 5, -327679, 655363, 6, -262143, 655363, 7, -458750, 720899, 4, -393214, 720899, 5, -327678, 720899, 6, -262142, 720899, 7, -458749, 786435, 4, -393213, 786435, 5, -327677, 786435, 6, -262141, 786435, 7, -196605, 786435, 8, -458748, 851971, 4, -393212, 851971, 5, -327676, 851971, 6, -262140, 851971, 7, -196604, 851971, 8, -65558, 393224, 11, -65557, 458760, 11, -65556, 524296, 11, -65555, 589832, 11, -65554, 655368, 11, -65553, 720904, 11, -65544, 196616, 11, -65543, 262152, 11, -65542, 327688, 11, -65541, 393224, 11, -65540, 458760, 11, -65539, 524296, 11, -65538, 655368, 11, -65537, 720904, 11, -131072, 786440, 11, -131071, 851976, 11, -131070, 917512, 11, -131069, 983048, 11, -131068, 655368, 11, -65559, 131080, 11, -524311, 65544, 4, 589801, 65544, 4, 655338, 65543, 3, 524297, 589832, 4, 524298, 655368, 4, 524299, 720904, 4, 524296, 524296, 4)
layer_1/name = "Lay1"
layer_1/z_index = 1
layer_1/tile_data = PackedInt32Array(-65554, 655364, 2, -18, 655364, 3, 65518, 655364, 4, 131054, 655364, 5, -65553, 720900, 2, -17, 720900, 3, 65519, 720900, 4, 131055, 720900, 5, -65552, 786436, 2, -16, 786436, 3, 65520, 786436, 4, 131056, 786436, 5, -65551, 851972, 2, -15, 851972, 3, 65521, 851972, 4, 131057, 851972, 5, 131058, 131076, 3, 196594, 131076, 4, 262130, 131076, 5, 327666, 131076, 6, 131059, 196612, 3, 196595, 196612, 4, 262131, 196612, 5, 327667, 196612, 6, 131060, 262148, 3, 196596, 262148, 4, 262132, 262148, 5, 327668, 262148, 6, 131061, 327684, 3, 196597, 327684, 4, 262133, 327684, 5, 327669, 327684, 6, 131062, 393220, 3, 196598, 393220, 4, 262134, 393220, 5, 327670, 393220, 6, 131063, 458756, 3, 196599, 458756, 4, 262135, 458756, 5, 327671, 458756, 6, -14, 131074, 8, 65522, 131074, 9, 65523, 196610, 9, 65524, 262146, 9, -11, 327682, 8, 65525, 327682, 9, -262157, 131072, 10, -196621, 131072, 11, -131085, 131072, 12, -262156, 196608, 10, -196620, 196608, 11, -131084, 196608, 12, -262155, 262144, 10, -196619, 262144, 11, -131083, 262144, 12, -262154, 327680, 10, -196618, 327680, 11, -131082, 327680, 12, -13, 196609, 8, -12, 262145, 8, 655353, 262151, 0, 720889, 262151, 1, 655357, 983047, 0, 720893, 983047, 1, 524292, 393219, 11, 589828, 393219, 12, 655364, 393219, 13, 720900, 393219, 14, 524293, 589827, 11, 589829, 589827, 12, 655365, 589827, 13, 720901, 589827, 14, 983052, 131076, 3, 1048588, 131076, 4, 1114124, 131076, 5, 1179660, 131076, 6, 983053, 196612, 3, 1048589, 196612, 4, 1114125, 196612, 5, 1179661, 196612, 6, 983054, 262148, 3, 1048590, 262148, 4, 1114126, 262148, 5, 1179662, 655364, 2, 983055, 327684, 3, 1048591, 327684, 4, 1114127, 327684, 5, 1179663, 720900, 2, 983056, 393220, 3, 1048592, 393220, 4, 1114128, 393220, 5, 1179664, 786436, 2, 983057, 458756, 3, 1048593, 458756, 4, 1114129, 458756, 5, 1179665, 851972, 2, 1245198, 655364, 3, 1310734, 655364, 4, 1376270, 655364, 5, 1245199, 720900, 3, 1310735, 720900, 4, 1376271, 720900, 5, 1245200, 786436, 3, 1310736, 786436, 4, 1376272, 786436, 5, 1245201, 851972, 3, 1310737, 851972, 4, 1376273, 851972, 5, 786442, 393216, 13, 851978, 393216, 13, 786443, 458752, 13, 851979, 458752, 13, 720906, 393216, 12, 720907, 458752, 12, 589838, 393216, 12, 655374, 393216, 13, 589839, 458752, 12, 655375, 458752, 13, 458764, 393216, 13, 524300, 393216, 13, 458765, 458752, 13, 524301, 458752, 13, 131088, 393216, 12, 196624, 393216, 13, 131089, 458752, 12, 196625, 458752, 13, 14, 458755, 12, 65550, 458755, 12, 15, 458752, 12, 65551, 458752, 12, 131086, 458755, 13, 131087, 458752, 13, 524299, 458759, 3, 13, 393219, 12, 65549, 393219, 12, 131085, 393219, 13, 393231, 393219, 13, 393232, 458755, 13)
layer_2/name = "OverPlayer1"
layer_2/z_index = 4
layer_2/tile_data = PackedInt32Array(-524310, 8, 4, -524309, 65544, 4, -524308, 131080, 4, -458772, 131080, 5, -524307, 196616, 4, -458771, 196616, 5, -524306, 262152, 4, -458770, 262152, 5, -524305, 327688, 4, -458769, 327688, 5, -524304, 393224, 4, -458768, 393224, 5, -524303, 458760, 4, -458767, 458760, 5, -524302, 524296, 4, -524301, 589832, 4, -524300, 655368, 4, -458764, 655368, 5, -524299, 720904, 4, -458763, 720904, 5, -524298, 786440, 4, -524297, 851976, 4, -524296, 917512, 4, -524295, 983048, 4, -458759, 983048, 5, -524294, 8, 4, -524293, 65544, 4, -524292, 131080, 4, -458756, 131080, 5, -524291, 196616, 4, -458755, 196616, 5, -524290, 262152, 4, -458754, 262152, 5, -524289, 327688, 4, -458753, 327688, 5, -589824, 393224, 4, -524288, 393224, 5, -589823, 458760, 4, -524287, 458760, 5, -589822, 524296, 4, -589821, 589832, 4, -589820, 655368, 4, -524284, 655368, 5, -589819, 720904, 4, -524283, 720904, 5, -589818, 786440, 4, -589817, 851976, 4, -589816, 917512, 4, -589815, 983048, 4, -524279, 983048, 5, 655338, 8, 15, 655339, 65544, 15, 655340, 131080, 15, 655341, 196616, 15, 655342, 262152, 15, 655343, 327688, 15, 655344, 393224, 15, 655345, 458760, 15, 655346, 524296, 15, 655347, 589832, 15, 655348, 655368, 15, 655349, 720904, 15, 655350, 786440, 15, 655351, 851976, 15, 655352, 917512, 15, 655353, 983048, 15, 786426, 393224, 15, 786427, 458760, 15, 786428, 524296, 15, -458775, 262151, 4, -393239, 262151, 5, -327703, 262151, 6, -262167, 262151, 7, -196631, 262151, 8, -131095, 262151, 9, -65559, 262151, 4, -23, 262151, 5, 65513, 262151, 6, 131049, 262151, 7, 196585, 262151, 8, 262121, 262151, 9, 327657, 262151, 10, 393193, 262151, 11, 458729, 262151, 12, 524265, 262151, 13, 589801, 262151, 14, -65549, 2, 8, -13, 2, 9, -65548, 65538, 8, -12, 65538, 9, 458744, 393219, 11, 524280, 393219, 12, 589816, 393219, 13, 458745, 589827, 11, 524281, 589827, 12, 589817, 589827, 13, -524277, 655367, 0, -458741, 655367, 1, -393205, 655367, 2, -327669, 655367, 3, -262133, 655367, 4, -196597, 655367, 0, -131061, 655367, 1, -65525, 655367, 2, 11, 655367, 3, 65547, 655367, 4, 131083, 655367, 5, 196619, 655367, 6, 262155, 655367, 7, 327691, 655367, 8, 393227, 655367, 9, 458763, 655367, 10, 655357, 327688, 15, 655358, 393224, 15, 655359, 458760, 15, 589824, 524296, 15, 589825, 589832, 15, 589826, 655368, 15, 589827, 720904, 15, 917515, 262151, 3, 983051, 262151, 4, 1048587, 262151, 5, 1114123, 262151, 3, 1179659, 262151, 4, 1245195, 262151, 5, 1310731, 262151, 6, 1376267, 262151, 7, 1441803, 262151, 8, 1507339, 262151, 9, 917522, 983047, 3, 983058, 983047, 3, 1048594, 983047, 4, 1114130, 983047, 5, 1179666, 983047, 6, 1245202, 983047, 7, 1310738, 983047, 8, 1376274, 983047, 9, 1441810, 983047, 10, 1507346, 983047, 11, 65554, 983047, 10, 131090, 983047, 11, 196626, 983047, 12, 262162, 983047, 13, 327698, 983047, 5, 393234, 983047, 6, 458770, 983047, 7, 524306, 983047, 8, 589842, 983047, 9, 655378, 983047, 10, 720914, 983047, 11, 786450, 983047, 12, 851986, 983047, 13, -524270, 983047, 1, -458734, 983047, 2, -393198, 983047, 3, -327662, 983047, 4, -262126, 983047, 5, -196590, 983047, 6, -131054, 983047, 7, -65518, 983047, 8, 18, 983047, 9, 655364, 393217, 9, 720900, 393217, 10, 786436, 393217, 11, 720901, 458753, 10, 786437, 458753, 11)
layer_3/name = "overPlayer2"
layer_3/z_index = 5
layer_3/tile_data = PackedInt32Array(458744, 2, 8, 524280, 2, 9, 458745, 65538, 8, 524281, 65538, 9, -589814, 65544, 4, -589813, 131080, 4, 589827, 262151, 3, 655363, 262151, 4, 720899, 262151, 5, 786435, 262151, 6, 851971, 262151, 7, 917508, 524296, 15, 917509, 589832, 15, 917510, 655368, 15, 917511, 720904, 15, 917512, 786440, 15, 917513, 851976, 15, 917514, 458760, 15, 917515, 524296, 15)

[node name="CharBody2D" parent="." instance=ExtResource("1_xyaeg")]
z_index = 3
position = Vector2(-79, 49)

[node name="LevelBounds" type="StaticBody2D" parent="."]
collision_mask = 3

[node name="CollisionShape2D" type="CollisionShape2D" parent="LevelBounds"]
position = Vector2(-185, -169)
shape = SubResource("RectangleShape2D_m3244")

[node name="CollisionShape2D2" type="CollisionShape2D" parent="LevelBounds"]
position = Vector2(311, -29)
shape = SubResource("RectangleShape2D_ne2qs")

[node name="CollisionShape2D6" type="CollisionShape2D" parent="LevelBounds"]
position = Vector2(-511, -268)
shape = SubResource("RectangleShape2D_ne2qs")

[node name="CollisionShape2D3" type="CollisionShape2D" parent="LevelBounds"]
position = Vector2(151, 367.938)
shape = SubResource("RectangleShape2D_pvvtm")

[node name="CollisionShape2D4" type="CollisionShape2D" parent="LevelBounds"]
position = Vector2(-350.5, 53.5)
shape = SubResource("RectangleShape2D_4dtym")

[node name="CollisionShape2D5" type="CollisionShape2D" parent="LevelBounds"]
position = Vector2(-351.5, -104.5)
shape = SubResource("RectangleShape2D_35bwn")

[node name="CollisionShape2D7" type="CollisionShape2D" parent="LevelBounds"]
position = Vector2(514.75, 209)
shape = SubResource("RectangleShape2D_p8h4u")

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="LevelBounds"]
polygon = PackedVector2Array(-706, -251, -704, 287, -192, 287, -194, 357, -90, 359, -88, 297, 122, 295, 120, 449, 380, 453, 380, 493, 582, 491, 578, -421, 376, -421, 368, -261, 200, -515, 794, -515, 788, 649, 530, 553, -848, 541, -854, -255)

[node name="SquareCollider" type="CollisionShape2D" parent="LevelBounds"]
position = Vector2(355, 398)
shape = SubResource("RectangleShape2D_3pfeg")

[node name="SquareCollider2" type="CollisionShape2D" parent="LevelBounds"]
position = Vector2(482, 320)
shape = SubResource("RectangleShape2D_3pfeg")

[node name="SquareCollider3" type="CollisionShape2D" parent="LevelBounds"]
position = Vector2(419, 257)
shape = SubResource("RectangleShape2D_3pfeg")

[node name="SquareCollider4" type="CollisionShape2D" parent="LevelBounds"]
position = Vector2(548, 95)
shape = SubResource("RectangleShape2D_3pfeg")

[node name="SquareCollider5" type="CollisionShape2D" parent="LevelBounds"]
position = Vector2(482, 66)
shape = SubResource("RectangleShape2D_3pfeg")

[node name="SquareCollider6" type="CollisionShape2D" parent="LevelBounds"]
position = Vector2(461, 63)
shape = SubResource("RectangleShape2D_3pfeg")

[node name="SquareCollider7" type="CollisionShape2D" parent="LevelBounds"]
position = Vector2(-225, 258)
shape = SubResource("RectangleShape2D_3pfeg")

[node name="FinishBarrier" type="StaticBody2D" parent="."]

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="FinishBarrier"]
polygon = PackedVector2Array(373, -211, 424, -211, 423, -229, 483, -229, 483, -216, 574, -218, 574, -310, 373, -305)

[node name="Area2D" type="Area2D" parent="."]
position = Vector2(467, -347)
metadata/_edit_group_ = true

[node name="Sprite2D" type="Sprite2D" parent="Area2D"]
texture = ExtResource("2_buas0")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource("CircleShape2D_2xg3j")

[node name="Boxes" type="Node2D" parent="."]

[node name="MoveableBox" parent="Boxes" instance=ExtResource("5_60lx8")]
position = Vector2(224, 263)

[node name="MoveableBox2" parent="Boxes" instance=ExtResource("5_60lx8")]
position = Vector2(425, 612)

[node name="MoveableBox3" parent="Boxes" instance=ExtResource("5_60lx8")]
position = Vector2(415, 382)

[node name="MoveableBox4" parent="Boxes" instance=ExtResource("5_60lx8")]
position = Vector2(468, 153)

[node name="MoveableBox5" parent="Boxes" instance=ExtResource("5_60lx8")]
position = Vector2(396, -182)

[node name="MoveableBox6" parent="Boxes" instance=ExtResource("5_60lx8")]
position = Vector2(452, -198)

[node name="MoveableBox7" parent="Boxes" instance=ExtResource("5_60lx8")]
position = Vector2(491, -146)

[node name="MoveableBox8" parent="Boxes" instance=ExtResource("5_60lx8")]
position = Vector2(546, -185)

[node name="MoveableBox9" parent="Boxes" instance=ExtResource("5_60lx8")]
position = Vector2(546, -129)

[node name="MendDetectorArea" type="Area2D" parent="."]
position = Vector2(-80, 67)
collision_layer = 0
collision_mask = 2
metadata/_edit_group_ = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="MendDetectorArea"]
shape = SubResource("CircleShape2D_t5f21")

[node name="TriggerBreak" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 130

[node name="CollisionShape2D" type="CollisionShape2D" parent="TriggerBreak"]
position = Vector2(389, 117)
shape = SubResource("RectangleShape2D_uqbmj")

[node name="BreakTimer" type="Timer" parent="."]
one_shot = true

[node name="MendTimer" type="Timer" parent="."]
wait_time = 12.0
one_shot = true

[node name="TextureRect" type="TextureRect" parent="."]
z_index = 5
material = SubResource("ShaderMaterial_j7tct")
offset_left = -1384.0
offset_top = -1057.0
offset_right = 1613.0
offset_bottom = 1768.0
texture = SubResource("CanvasTexture_sgmir")

[connection signal="body_entered" from="TriggerBreak" to="." method="_on_trigger_break_body_entered"]
[connection signal="timeout" from="BreakTimer" to="." method="_on_break_timer_timeout"]
[connection signal="timeout" from="MendTimer" to="." method="_on_mend_timer_timeout"]
